--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,11 @@
     <string name="log_in">Log in</string>
     <string name="guest_mode">Guest Mode</string>
     <string name="not_have_an_account_create_new">Not have an account, create new ..?</string>
+    <string name="error_mobile_phone">Mobile Phone is required</string>
+    <string name="error_password">"Password is required "</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="logout_confirm">Are you sure you want to log out ??</string>
+    <string name="logout">Log Out</string>
+    <string name="cancel">Cancel</string>
 </resources>
