--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -104,4 +104,5 @@
     <string name="profile_edit_success">Profile edited successfully</string>
     <string name="error_loading_orders">Error during loading orders..Try again ??</string>
     <string name="no_available_orders">No available orders</string>
+    <string name="success">Success</string>
 </resources>
